--- a/app/views/advert/ilan.html.erb
+++ b/app/views/advert/ilan.html.erb
@@ -388,7 +388,7 @@
 													<%= render "ilanozelders" %>
 													<% end %>
 
-													<h4  class="add-to item_price">İlan sahibinin telefonu: <span style="color:#4DACC9;" ><%= @advert_user.phone %></span></h4>
+													<h4  class="add-to item_price">İlan sahibinin epostası: <span style="color:#4DACC9;" ><%= @advert_user.email %></span></h4>
 													<br>
 													<h4> İlan sahibinin profili için <a href="/uye/<%= @advert_user.username %>">buraya</a> tıklayınız. </h4>
 												</div>
@@ -428,7 +428,7 @@
 													<%= render "ilanozelders" %>
 													<% end %>
 
-													<h4  class="add-to item_price">İlan sahibinin telefonu: <span style="color:#4DACC9;" ><%= @advert_user.phone %></span></h4>
+													<h4  class="add-to item_price">İlan sahibinin epostası: <span style="color:#4DACC9;" ><%= @advert_user.email %></span></h4>
 													<br>
 													<h4> İlan sahibinin profili için <a href="/uye/<%= @advert_user.username %>">buraya</a> tıklayınız. </h4>
 												</div>
