--- a/app/views/application/_loginContainer.html.erb
+++ b/app/views/application/_loginContainer.html.erb
@@ -76,14 +76,15 @@
 
 	<div style="margin-right:-10px;" class="col-lg-10 col-md-10 col-sm-10">
 
-		<span style="color:black;"> Hoşgeldin; <%= current_user.name %> <%= current_user.surname %></span>
+		<span style="color:black; float:right"> Hoşgeldin; <%= current_user.name %> <%= current_user.surname %></span>
 
 		<div  style="color:black;clear: both;">
 
 			<% if current_user && current_user.role=='admin' %>
 			<a href="/admin"> Admin Paneli </a>&nbsp;&nbsp;|&nbsp;&nbsp;
 			<% end %>
-
+			
+			<a href="/ilanver"> İlan Ver </a>&nbsp;&nbsp;|&nbsp;&nbsp;
 			<a href="/uye/<%= current_user.username %>"> Profilim </a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/logout">Çıkış Yap </a>
 
 		</div>
