--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -213,7 +213,7 @@
 				</div>
 
 				<div style="padding-left:50px; margin-top:85px;"class="visible-lg sagsutun col-lg-6">
-					-Kullanım Koşulları için <a href="#">buraya</a> tıklayınız.
+					-Kullanım Koşulları için <a href="/kullanimkosullari">buraya</a> tıklayınız.
 					<br>
 					<br>
 					
@@ -221,13 +221,13 @@
 					<br>
 					<br>
 					
-					-Sitemizin işleyişi ile ilgili bilgi mi almak istiyorsunuz? <a href="#">Buraya</a> tıklayın.
+					-Sitemizin işleyişi ile ilgili bilgi mi almak istiyorsunuz? <a href="/iletisim">Buraya</a> tıklayın.
 					<br>
-					Ya da yardıma mı ihtiyacınız var? O zaman <a href="#">buraya</a> tıklayın.
+					Ya da yardıma mı ihtiyacınız var? O zaman <a href="/yardim">buraya</a> tıklayın.
 				</div>
 				
 				<div style="margin-top:50px;"class="visible-xs visible-sm visible-md sagsutun col-lg-6">
-					-Kullanım Koşulları için <a href="#">buraya</a> tıklayınız.
+					-Kullanım Koşulları için <a href="/kullanimkosullari">buraya</a> tıklayınız.
 					<br>
 					<br>
 					
@@ -235,9 +235,9 @@
 					<br>
 					<br>
 					
-					-Sitemizin işleyişi ile ilgili bilgi mi almak istiyorsunuz? <a href="#">Buraya</a> tıklayın.
+					-Sitemizin işleyişi ile ilgili bilgi mi almak istiyorsunuz? <a href="/iletisim">Buraya</a> tıklayın.
 					<br>
-					Ya da yardıma mı ihtiyacınız var? O zaman <a href="#">buraya</a> tıklayın.
+					Ya da yardıma mı ihtiyacınız var? O zaman <a href="/yardim">buraya</a> tıklayın.
 				</div>
 
 			</div>
