--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -269,7 +269,7 @@
 imageupload('#imagesikinciel').filer({
 	limit: 5,
 	maxSize: 2,
-    changeInput: '<div class="jFiler-input-dragDrop"><div class="jFiler-input-inner"><div class="jFiler-input-icon"><i class="icon-jfi-cloud-up-o"></i></div><div class="jFiler-input-text"><h3>Drag&Drop files here</h3> <span style="display:inline-block; margin: 15px 0">or</span></div><a class="jFiler-input-choose-btn blue">Browse Files</a></div></div>',
+    changeInput: '<div class="jFiler-input-dragDrop"><div class="jFiler-input-inner"><div class="jFiler-input-icon"><i class="icon-jfi-cloud-up-o"></i></div><div class="jFiler-input-text"><h3>Resimlerinizi Sürükleyebilirsiniz</h3> <span style="display:inline-block; margin: 15px 0">veya</span></div><a class="jFiler-input-choose-btn blue">Dosyalara Gözat</a></div></div>',
     showThumbs: true,
     theme: "dragdropbox",
     templates: {
@@ -366,7 +366,7 @@ imageupload('#imagesikinciel').filer({
 imageupload('#imagesevarkadasi').filer({
 	limit: 5,
 	maxSize: 2,
-    changeInput: '<div class="jFiler-input-dragDrop"><div class="jFiler-input-inner"><div class="jFiler-input-icon"><i class="icon-jfi-cloud-up-o"></i></div><div class="jFiler-input-text"><h3>Drag&Drop files here</h3> <span style="display:inline-block; margin: 15px 0">or</span></div><a class="jFiler-input-choose-btn blue">Browse Files</a></div></div>',
+    changeInput: '<div class="jFiler-input-dragDrop"><div class="jFiler-input-inner"><div class="jFiler-input-icon"><i class="icon-jfi-cloud-up-o"></i></div><div class="jFiler-input-text"><h3>Resimlerinizi Sürükleyebilirsiniz</h3> <span style="display:inline-block; margin: 15px 0">veya</span></div><a class="jFiler-input-choose-btn blue">Dosyalara Gözat</a></div></div>',
     showThumbs: true,
     theme: "dragdropbox",
     templates: {
@@ -463,7 +463,7 @@ imageupload('#imagesevarkadasi').filer({
 imageupload('#imagesozelders').filer({
 	limit: 5,
 	maxSize: 2,
-    changeInput: '<div class="jFiler-input-dragDrop"><div class="jFiler-input-inner"><div class="jFiler-input-icon"><i class="icon-jfi-cloud-up-o"></i></div><div class="jFiler-input-text"><h3>Drag&Drop files here</h3> <span style="display:inline-block; margin: 15px 0">or</span></div><a class="jFiler-input-choose-btn blue">Browse Files</a></div></div>',
+    changeInput: '<div class="jFiler-input-dragDrop"><div class="jFiler-input-inner"><div class="jFiler-input-icon"><i class="icon-jfi-cloud-up-o"></i></div><div class="jFiler-input-text"><h3>Resimlerinizi Sürükleyebilirsiniz</h3> <span style="display:inline-block; margin: 15px 0">veya</span></div><a class="jFiler-input-choose-btn blue">Dosyalara Gözat</a></div></div>',
     showThumbs: true,
     theme: "dragdropbox",
     templates: {
