--- a/app/views/application/_ilanikinciel.html.erb
+++ b/app/views/application/_ilanikinciel.html.erb
@@ -1,8 +1,10 @@
 <h4  class="add-to item_price">Fiyat: <span style="color:#4DACC9;;" ><%= @advert.price %>&#8378;</span></h4>
 <br>
 
-<h4  class="add-to item_price">Ürün Rengi: <span style="color:#4DACC9;;" ><%= @advertable.renkler %></span></h4>
-<br>
+<% if @advertable.renkler %>
+	<h4  class="add-to item_price">Ürün Rengi: <span style="color:#4DACC9;;" ><%= @advertable.renkler %></span></h4>
+	<br>
+<% end %>
 
 <h4  class="add-to item_price">Marka: <span style="color:#4DACC9;;" ><%= @advertable.brand %></span></h4>
 <br>
