--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -262,7 +262,7 @@
 										<div style="display: none;"
 										class="col-xs-12 col-sm-12 hidden-lg hidden-md form-group  karakterhatasi label label-danger">
 											
-											Sadece türkçe olmayan harfleri(a-z),rakamları ve &nbsp;  .&nbsp;  -&nbsp;  _&nbsp; karakterlerini girebilirsiniz.
+											Sadece türkçe olmayan harfleri, rakamları ve &nbsp;  .&nbsp;  -&nbsp;  _&nbsp; karakterlerini girebilirsiniz.
 										</div>
 
 										<div style="display: none;"
@@ -299,7 +299,7 @@
 
 										<div style="display: none;"
 										class="col-lg-12 col-md-12 hidden-xs hidden-sm form-group  karakterhatasi label label-danger">
-											Sadece türkçe olmayan harfleri(a-z),rakamları ve &nbsp;  .&nbsp;  -&nbsp;  _&nbsp; karakterlerini girebilirsiniz.
+											Sadece türkçe olmayan harfleri, rakamları ve &nbsp;  .&nbsp;  -&nbsp;  _&nbsp; karakterlerini girebilirsiniz.
 										</div>
 
 										<div style="display: none;"
