--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -4,6 +4,8 @@
 		<title>Campus İlan</title>
 		<%= csrf_meta_tags %>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		<meta name="google-site-verification" content="W-BHiLZAIddsr1TZeE8NJ1UjYt14NMcpuDjTkvrqgh0" />
 		<!-- Bootstrap -->
 		<link href="resources/css/bootstrap.min.css" rel="stylesheet">
 
@@ -624,7 +626,7 @@
 
 										<div class='descriptionSabit2'>
 											<!-- description content -->
-											<div class='description_content2'>
+											<div class='description_content'>
 												<%= advert.price %> &#x20BA;
 											</div>
 											<!-- end description content -->
@@ -652,7 +654,7 @@
 
 										<div class='descriptionSabit2'>
 											<!-- description content -->
-											<div class='description_content2'>
+											<div class='description_content'>
 												<%= advert.price %> &#x20BA;
 											</div>
 											<!-- end description content -->
