--- a/app/views/advert/firsatlar.html.erb
+++ b/app/views/advert/firsatlar.html.erb
@@ -696,7 +696,7 @@
 
 					<div class="col-lg-4">
 
-						<h4>Zaten giriş yaptınız ve ilan mı açmak istiyorsunuz?</h4>
+						<h4>Giriş yaptınız ve ilan mı açmak istiyorsunuz?</h4>
 
 						<button type = "button" class = "btn btn-primary">
 							İlan Aç
