--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -344,7 +344,7 @@ imageupload('#imagesikinciel').filer({
         success: function(data, el){
             var parent = el.find(".jFiler-jProgressBar").parent();
             el.find(".jFiler-jProgressBar").fadeOut("slow", function(){
-                $("<div class=\"jFiler-item-others text-success\"><i class=\"icon-jfi-check-circle\"></i> Success</div>").hide().appendTo(parent).fadeIn("slow");    
+                $("<div class=\"jFiler-item-others text-success\"><i class=\"icon-jfi-check-circle\"></i> Başarılı</div>").hide().appendTo(parent).fadeIn("slow");    
             });
             
            	document.getElementById('resimlerikinciel').value += data.image + ',';
@@ -354,7 +354,7 @@ imageupload('#imagesikinciel').filer({
         error: function(el){
             var parent = el.find(".jFiler-jProgressBar").parent();
             el.find(".jFiler-jProgressBar").fadeOut("slow", function(){
-                $("<div class=\"jFiler-item-others text-error\"><i class=\"icon-jfi-minus-circle\"></i> Error</div>").hide().appendTo(parent).fadeIn("slow");    
+                $("<div class=\"jFiler-item-others text-error\"><i class=\"icon-jfi-minus-circle\"></i> Hata </div>").hide().appendTo(parent).fadeIn("slow");    
             });
         },
         statusCode: null,
