--- a/app/views/advert/firsatlar.html.erb
+++ b/app/views/advert/firsatlar.html.erb
@@ -672,33 +672,33 @@
 
 				<div style="background-color:#9DD2E3;" class="row well">
 
-					<div class="col-lg-4">
+					<div class="col-lg-4 equal-height-panels">
 
 						<h4>Giriş mi Yapmak İstiyorsunuz?</h4>
 						<br class="hidden-xs hidden-sm">
 
-						<button type = "button" class = "btn btn-primary">
+						<button style="bottom:0;" type = "button" class = "btn btn-primary">
 							Giriş Yap
 						</button>
 
 					</div>
 
-					<div class="col-lg-4">
+					<div class="col-lg-4 equal-height-panels">
 
 						<h4>Kayıt mı Olmak İstiyorsunuz?</h4>
 						<br class="hidden-xs hidden-sm">
 
-						<button type = "button" class = "btn btn-primary">
+						<button style="bottom:0;" type = "button" class = "btn btn-primary">
 							Kayıt Ol
 						</button>
 
 					</div>
 
-					<div class="col-lg-4">
+					<div class="col-lg-4 equal-height-panels">
 
 						<h4>Giriş yaptınız ve ilan mı açmak istiyorsunuz?</h4>
 
-						<button type = "button" class = "btn btn-primary">
+						<button style="bottom:0;" type = "button" class = "btn btn-primary">
 							İlan Aç
 						</button>
 
@@ -758,6 +758,30 @@
 				});
 			});
 		</script>
+		
+		
+		<!-- jquery-match-height-master -->
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+		<script src="/resources/plugins/jquery-match-height-master/jquery.matchHeight.js" type="text/javascript"></script>
+
+		<script>
+			var heightfixer = jQuery.noConflict();
+
+		</script>
+
+		<script>
+			heightfixer(function() {
+				heightfixer('.equal-height-panels').matchHeight();
+			});
+
+			heightfixer(function() {
+				heightfixer('.equalheight2').matchHeight();
+			});
+
+		</script>
+		
 
 		<!-- Tooltip eklentisi-->
 
