--- a/app/views/user/member2.html.erb
+++ b/app/views/user/member2.html.erb
@@ -185,7 +185,7 @@
 
 				<div class=" ustpaneller">
 
-					<aside class="col-lg-3 col-md-3 col-sm-3 hidden-xs ">
+					<aside class="col-lg-3 col-md-3 col-sm-3 hidden-xs hidden-sm">
 
 						<div class="row">
 
@@ -392,7 +392,7 @@
 
 					</aside>
 
-					<div class="col-lg-9 col-md-9 col-sm-9">
+					<div class="col-lg-9 col-md-9 col-sm-12">
 
 						<div class="row">
 
