--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -3,8 +3,8 @@
 	<head>
 		<title>Campus İlan</title>
 		<%= csrf_meta_tags %>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
+		<%= render 'metalar' %>
 		
 		
 		
