--- a/app/views/user/member2.html.erb
+++ b/app/views/user/member2.html.erb
@@ -12,7 +12,7 @@
 		<META http-equiv=content-type content=text/html;charset=iso-8859-9>
 		<META http-equiv=content-type content=text/html;charset=windows-1254>
 		<META http-equiv=content-type content=text/html;charset=x-mac-turkish>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<%= render 'metalar' %>
 
 		<!-- Bootstrap -->
 		<link href="/resources/css/bootstrap.min.css" rel="stylesheet">
