--- a/app/views/application/_loginContainer.html.erb
+++ b/app/views/application/_loginContainer.html.erb
@@ -82,7 +82,7 @@
 
 			<% if current_user && current_user.role=='admin' %>
 			<a href="/admin"> Admin Paneli </a>&nbsp;&nbsp;|&nbsp;&nbsp;
-			<a href="/admin"> İlan Onayla </a>&nbsp;&nbsp;|&nbsp;&nbsp;
+			<a href="/ilanonay"> İlan Onayla </a>&nbsp;&nbsp;|&nbsp;&nbsp;
 			<% end %>
 			
 			<a href="/ilanver"> İlan Ver </a>&nbsp;&nbsp;|&nbsp;&nbsp;
