--- a/app/views/user/ilanonay.html.erb
+++ b/app/views/user/ilanonay.html.erb
@@ -48,7 +48,7 @@
 							<br>
 						 <% end %> </td>
 						 
-						 <%= form_tag '/ilanonay', :id => 'ilanonay', :class => 'form-horizontal', :role => 'form' do  %>
+						 <%= form_tag '/ilanonay', :id => 'ilanonay', :class => 'form-horizontal', :role => 'form', :method => 'post' do  %>
 
 						<td>
 							
@@ -63,7 +63,7 @@
 						
 						<% end %>
 						
-						<%= form_tag '/ilansil', :id => 'ilansil', :class => 'form-horizontal', :role => 'form' do  %>
+						<%= form_tag '/ilansil', :id => 'ilansil', :class => 'form-horizontal', :role => 'form', :method => 'post' do  %>
 						
 						<td>
 							
