--- a/app/views/advert/ilan.html.erb
+++ b/app/views/advert/ilan.html.erb
@@ -258,8 +258,12 @@
 
 									<h1 style="word-break: break-all;" class="hidden-xs hidden-sm "><%= @advert.name %></h1>
 									
+									<p class="hidden-xs hidden-sm">Bu ilan <%= @viewed %> kez görüntülenmiştir.</p>
+									
 													
 									<h1 class="visible-xs visible-sm " style="word-break: break-all;text-align:center" ><u><%= @advert.name %></u></h1>
+									<p style="text-align:center;" class="visible-xs visible-sm">Bu ilan <%= @viewed %> kez görüntülenmiştir.</p>
+									
 
 									<br class="visible-xs visible-sm ">
 									<br class="visible-xs visible-sm ">
@@ -309,7 +313,7 @@
 
 									</div>
 
-									<br>
+									<br class="hidden-xs hidden-sm">
 
 									<div class="hidden-sm hidden-xs">
 										<% if current_user!= nil %>
