--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -3,6 +3,7 @@
 	<head>
 		<title>Campus İlan</title>
 		<%= csrf_meta_tags %>
+		<meta name="google-site-verification" content="qLZkqycaPaU6tBoi0vasQHIAoRRbBvnbDCmqTOsI6lQ" />
 		
 		<%= render 'metalar' %>
 		
