--- a/app/views/application/_loginContainer.html.erb
+++ b/app/views/application/_loginContainer.html.erb
@@ -78,7 +78,7 @@
 
 		<span style="color:black; float:right"> Hoşgeldin; <%= current_user.name %> <%= current_user.surname %></span>
 
-		<div  style="color:black;clear: both;float:right;">
+		<div  style="color:black;float:right;">
 
 			<% if current_user && current_user.role=='admin' %>
 			<a href="/admin"> Admin Paneli </a>&nbsp;&nbsp;|&nbsp;&nbsp;
