--- a/app/views/application/_ozeldersform.html.erb
+++ b/app/views/application/_ozeldersform.html.erb
@@ -47,7 +47,7 @@
 	<label class = "col-sm-2 control-label">Ders Kategorisi</label>
 
 	<div class = "col-sm-10">
-		<%= field.select :lecture, [['Matematik', 'matematik'], ['Fizik', 'fizik'], ['Kimya', 'kimya'],['Biyoloji','biyoloji'],['Genel Mühendislik','genelmuhendislik'],['Genel Eğitim Bilimleri','genelegitimbilimleri']],{}, {class:"form-control"}  %>
+		<%= field.select :lecture, [['Matematik', 'matematik'], ['Fizik', 'fizik'], ['Kimya', 'kimya'],['Biyoloji','biyoloji'],['Genel Mühendislik','genelmuhendislik'],['Genel Eğitim Bilimleri','genelegitimbilimleri'],['Siyasal Bilimler','siyasalbilimler'],['Diğer','diger']],{}, {class:"form-control"}  %>
 	</div>
 </div>
 
