--- a/app/views/application/_loginContainer.html.erb
+++ b/app/views/application/_loginContainer.html.erb
@@ -72,7 +72,7 @@
 
 <% else %>
 
-<div style="padding-right:20px;" class="hidden-xs row">
+<div style="padding-right:20px;" class="hidden-xs hidden-sm row">
 
 	<div style="margin-right:-10px;" class="col-lg-10 col-md-10 col-sm-10">
 
@@ -118,7 +118,7 @@
 
 </div>
 
-<div class="visible-xs">
+<div class="visible-xs visible-sm">
 
 <p style="color:black;float:right;">
 	Hoşgeldin; <%= current_user.username %>
