--- a/app/views/advert/ilanguncelle.html.erb
+++ b/app/views/advert/ilanguncelle.html.erb
@@ -203,18 +203,32 @@
 
 				</div>
 
-				<div style="padding-left:50px; margin-top:85px;"class="sagsutun col-lg-6">
-					-Kullanım Koşulları için <a href="#">buraya</a> tıklayınız.
+				<div style="padding-left:50px; margin-top:85px;"class="visible-lg sagsutun col-lg-6">
+					-Kullanım Koşulları için <a href="/kullanimkosullari">buraya</a> tıklayınız.
 					<br>
 					<br>
-					<br>
+					
 					-İlanınız onaylandıktan sonra yayınlanacaktır.
 					<br>
 					<br>
+					
+					-Sitemizin işleyişi ile ilgili bilgi mi almak istiyorsunuz? <a href="/iletisim">Buraya</a> tıklayın.
 					<br>
-					-Sitemizin işleyişi ile ilgili bilgi mi almak istiyorsunuz? <a href="#">Buraya</a> tıklayın.
+					Ya da yardıma mı ihtiyacınız var? O zaman <a href="/yardim">buraya</a> tıklayın.
+				</div>
+				
+				<div style="margin-top:50px;"class="visible-xs visible-sm visible-md sagsutun col-lg-6">
+					-Kullanım Koşulları için <a href="/kullanimkosullari">buraya</a> tıklayınız.
 					<br>
-					Ya da yardıma mı ihtiyacınız var? O zaman <a href="#">buraya</a> tıklayın.
+					<br>
+					
+					-İlanınız onaylandıktan sonra yayınlanacaktır.
+					<br>
+					<br>
+					
+					-Sitemizin işleyişi ile ilgili bilgi mi almak istiyorsunuz? <a href="/iletisim">Buraya</a> tıklayın.
+					<br>
+					Ya da yardıma mı ihtiyacınız var? O zaman <a href="/yardim">buraya</a> tıklayın.
 				</div>
 
 			</div>
