--- a/app/views/application/_ikincielform.html.erb
+++ b/app/views/application/_ikincielform.html.erb
@@ -187,6 +187,7 @@
 	<div class = "col-sm-offset-2 col-sm-5">
 		<%= t.submit 'İlanı Güncelle',class:"btn btn-default" %>
 	</div>
+	<br class="visible-xs">
 	<div class = "col-sm-5">
 		<button type="button" class="btn btn-danger" data-title="ilankapat" data-toggle="modal" data-target=".ilankapatildi">İlanı Kapat</button>
 	</div>
