--- a/app/views/user/sifremiunuttum.html.erb
+++ b/app/views/user/sifremiunuttum.html.erb
@@ -160,7 +160,7 @@
 									<input class="form-control" type="text"  name="eposta" placeholder="E-posta adresinizi giriniz.">
 								</div>
 								<br />
-								<div class="g-recaptcha" data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
+								<div style="overflow:hidden;" class="g-recaptcha" data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
 								<br>
 								<input type="submit" value="Gönder" class="btn btn-large btn-primary" />
 							<% end %>
