--- a/app/views/index/aramasonuclari.html.erb
+++ b/app/views/index/aramasonuclari.html.erb
@@ -782,7 +782,7 @@
 		<div style="margin-top:25px;" class="row">
 		<div class="col-xs-12 col-md-6">
 		<p class="lead">
-		<%= advert.price  %></p>
+		<%= advert.price  %> &#x20BA;</p>
 		</div>
 		<div class="col-xs-12 col-md-6">
 		<a style="float:right;" class="btn btn-success" href="<%= advert.href %>">İlana Git</a>
