--- a/app/views/advert_mailer/ilanonay.html.erb
+++ b/app/views/advert_mailer/ilanonay.html.erb
@@ -9,7 +9,7 @@
 
 <body >
 	
-	<img src="http://144.122.148.221:3000/resources/images/logo.png"  >
+	<img src="http://campusilan.com/resources/images/logo.png"  >
 	
 	<p>	Size iyi bir haberimiz var!!
 İlanınız başarıyla onaylandı. Artık ilanınızı sistemimizde görebilir,inceleyebilir ve gerekirse düzenleyebilirsiniz. </p>
@@ -17,7 +17,7 @@
 
 	
 	
-<a href="<%= @advert.href %>"> İlana Git</a> <br><br>
+<a href="http://campusilan.com/<%= @advert.href %>"> İlana Git</a> <br><br>
 
 
 <p>Bizi tercih ettiğiniz için teşekkür ederiz. </p> 
