--- a/app/views/application/_smartmenus.html.erb
+++ b/app/views/application/_smartmenus.html.erb
@@ -20,6 +20,7 @@
 					<% topUniversities.each do |record| %>
 					<li><a href="/universiteler?universities=<%= record[0] %>"><%= record[1] + " (" + record[2]+ ")" %></a></li>
 					<% end %>
+					<li><a href="/universiteler">DİĞER</a></li>
 				</ul>
 				
 			</li>
