--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -2544,7 +2544,7 @@
 
 		</div>
 
-		<a id='backTop'>Back To Top</a>
+		<a class="hidden-xs" id='backTop'>Back To Top</a>
 
 		<%= render "footer" %>
 
