--- a/app/views/application/_smartmenus.html.erb
+++ b/app/views/application/_smartmenus.html.erb
@@ -46,8 +46,8 @@
 			<li><a href="/yardim">Yardım</a></li>
 
 			<div class="hidden-xs hidden-sm" style="float: right; margin: 6px;">
-				<form>
-					<input type="search" placeholder="Arama">
+				<form action="/aramasonuclari" method="get">
+					<input type="search" name="aramakismi"  placeholder="Arama">
 				</form>
 			</div>
 		</ul>
