--- a/app/views/advert_mailer/ilanonay.html.erb
+++ b/app/views/advert_mailer/ilanonay.html.erb
@@ -17,7 +17,7 @@
 
 	
 	
-<a href="http://campusilan.com/<%= @advert.href %>"> İlana Git</a> <br><br>
+<a href="http://campusilan.com<%= @advert.href %>"> İlana Git</a> <br><br>
 
 
 <p>Bizi tercih ettiğiniz için teşekkür ederiz. </p> 
