--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -103,7 +103,7 @@
 
 	<p style="float: right; margin-right: 20px; margin-top: 5px;">
 		©2016 CAMPUS İLAN&nbsp;&nbsp;&nbsp;&nbsp;<a
-		href="http://www.campusilan.com">campusilan.com</a>
+		href="http://campusilan.turbulence6th.com">campusilan.turbulence6th.com</a>
 	</p>
 
 </div>
