--- a/app/views/index/hakkimizda.html.erb
+++ b/app/views/index/hakkimizda.html.erb
@@ -161,20 +161,14 @@
 					<br>
 
 					<p>
-						Developers: <a href="mailto:onurdemirtas91@gmail.com">Onur DEMİRTAŞ</a> &amp; <a
-						href="mailto:oguz.tanrikulu@metu.edu.tr">Oğuz TANRIKULU</a>
+						Developer: <a
+						href="mailto:turbulence6th@gmail.com">Oğuz TANRIKULU</a>
 					</p>
 					
-					<p>İletişim: <a href="mailto:info@campusilan.com">info@campusilan.com</a> <br> 
+					<p>İletişim: <a href="mailto:campusilan@gmail.com">campusilan@gmail.com</a> <br> 
 					Veya <a href="/iletisim" >buraya</a> tıklayınız. </p>
 					
-					<br>
 					
-					<u>Katkıda Bulunanlar:</u> <br><br>
-					<p>-Güney Gülden</p>
-					<p>-Ramazan Zor</p>
-					<p>-Hikmet Gökhan Kılıç</p>
-					<p>-Coşku Moler</p>
 					
 					
 					
