--- a/app/views/application/_headerfixedjs.html.erb
+++ b/app/views/application/_headerfixedjs.html.erb
@@ -1,7 +1,7 @@
 <!-- responsive header -->
 
 <script
-	src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <script>
 	var responsiveheader = jQuery.noConflict();
