--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -38,7 +38,7 @@
 
 		<link rel="stylesheet" href="resources/assets/header-fixed.css">
 
-		<link href='http://fonts.googleapis.com/css?family=Cookie'
+		<link href='https://fonts.googleapis.com/css?family=Cookie'
 		rel='stylesheet' type='text/css'>
 
 		<!-- Fixed Header sonu -->
@@ -211,8 +211,6 @@
 	</head>
 
 	<body>
-		asdasd
-
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
 		<!-- Include all compiled plugins (below), or include individual files
@@ -2774,7 +2772,7 @@
 
 		<!-- Tooltip eklentisi-->
 
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 
 		<script>
 			var $tooltip = jQuery.noConflict();
@@ -2805,7 +2803,7 @@
 
 		<!-- yukari zipla eklentisi-->
 
-		<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 
 		<script>
 			var yukarizipla = jQuery.noConflict();
@@ -2856,7 +2854,7 @@
 		<!-- Item Slider plugin -->
 
 		<script
-		src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
 		<script>
 			var $itemslider = jQuery.noConflict();
