--- a/app/views/index/iletisim.html.erb
+++ b/app/views/index/iletisim.html.erb
@@ -220,12 +220,9 @@
 							</legend>
 							<address>
 								<strong>Campus İlan</strong> 
+								
 								<br><br>
-								Orta Doğu Teknik Üniversitesi Kampüsü
-								<br>
-								Öğrenci Konukevi 2 (Ebi 1) Çankaya,Ankara
-								<br><br>
-								E-posta: <a href="mailto:info@campusilan.com">info@campusilan.com</a>
+								E-posta: <a href="mailto:campusilan@gmail.com">campusilan@gmail.com</a>
 								
 							</address>
 							
