--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -529,29 +529,29 @@
 									1. Sözleşmenin Konusu
 									<br>
 
-									İşbu Sözleşme’nin konusu Campüs İlan’ın sahip olduğu internet sitesi <a href="http://www.campusilan.com/">www.campusilan.com</a> ‘dan üyenin faydalanma şartlarının belirlenmesidir.
+									İşbu Sözleşme’nin konusu Campüs İlan’ın sahip olduğu internet sitesi <a href="http://campusilan.turbulence6th.com/">campusilan.turbulence6th.com</a> ‘dan üyenin faydalanma şartlarının belirlenmesidir.
 									<br>
 									<br>
 
 									2. Tarafların Hak ve Yükümlülükleri
 									<br>
 
-									2.1. Üye, <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesine üye olurken verdiği kişisel ve diğer sair bilgilerin kanunlar önünde doğru olduğunu, Campüs İlan’ın bu bilgilerin gerçeğe aykırılığı nedeniyle uğrayacağı tüm zararları aynen ve derhal tazmin edeceğini beyan ve taahhüt eder.
+									2.1. Üye, <a href="http://campusilan.turbulence6th.com/">campusilan.turbulence6th.com</a> internet sitesine üye olurken verdiği kişisel ve diğer sair bilgilerin kanunlar önünde doğru olduğunu, Campüs İlan’ın bu bilgilerin gerçeğe aykırılığı nedeniyle uğrayacağı tüm zararları aynen ve derhal tazmin edeceğini beyan ve taahhüt eder.
 									<br>
 
 									2.2. Üye, Campüs İlan tarafından kendisine verilmiş olan şifreyi başka kişi ya da kuruluşlara veremez, üyenin sözkonusu şifreyi kullanma hakkı bizzat kendisine aittir. Bu sebeple doğabilecek tüm sorumluluk ile üçüncü kişiler veya yetkili merciler tarafından Campüs İlan’a karşı ileri sürülebilecek tüm iddia ve taleplere karşı, Campüs İlan’ın sözkonusu izinsiz kullanımdan kaynaklanan her türlü tazminat ve sair talep hakkı saklıdır.
 									<br>
 
-									2.3. Üye <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesini kullanırken yasal mevzuat hükümlerine riayet etmeyi ve bunları ihlal etmemeyi baştan kabul ve taahhüt eder. Aksi takdirde, doğacak tüm hukuki ve cezai yükümlülükler tamamen ve münhasıran üyeyi bağlayacaktır.
+									2.3. Üye <a href="http://campusilan.turbulence6th.com/">campusilan.turbulence6th.com</a> internet sitesini kullanırken yasal mevzuat hükümlerine riayet etmeyi ve bunları ihlal etmemeyi baştan kabul ve taahhüt eder. Aksi takdirde, doğacak tüm hukuki ve cezai yükümlülükler tamamen ve münhasıran üyeyi bağlayacaktır.
 									<br>
 
-									2.4. Üye, <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesini hiçbir şekilde kamu düzenini bozucu, genel ahlaka aykırı, başkalarını rahatsız ve taciz edici şekilde, yasalara aykırı bir amaç için, başkalarının fikri ve telif haklarına tecavüz edecek şekilde kullanamaz. Ayrıca, üye başkalarının hizmetleri kullanmasını önleyici veya zorlaştırıcı faaliyet (spam, virus, truva atı, vb.) ve işlemlerde bulunamaz.
+									2.4. Üye, <a href="http://campusilan.turbulence6th.com/">campusilan.turbulence6th.com</a> internet sitesini hiçbir şekilde kamu düzenini bozucu, genel ahlaka aykırı, başkalarını rahatsız ve taciz edici şekilde, yasalara aykırı bir amaç için, başkalarının fikri ve telif haklarına tecavüz edecek şekilde kullanamaz. Ayrıca, üye başkalarının hizmetleri kullanmasını önleyici veya zorlaştırıcı faaliyet (spam, virus, truva atı, vb.) ve işlemlerde bulunamaz.
 									<br>
 
-									2.5. <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesinde üyeler tarafından beyan edilen, yazılan, kullanılan fikir ve düşünceler, tamamen üyelerin kendi kişisel görüşleridir ve görüş sahibini bağlar. Bu görüş ve düşüncelerin Campüs İlan’la hiçbir ilgi ve bağlantısı yoktur. Campüs İlan’ın üyenin beyan edeceği fikir ve görüşler nedeniyle üçüncü kişilerin uğrayabileceği zararlardan ve üçüncü kişilerin beyan edeceği fikir ve görüşler nedeniyle üyenin uğrayabileceği zararlardan dolayı herhangi bir sorumluluğu bulunmamaktadır.
+									2.5. <a href="http://campusilan.turbulence6th.com/">campusilan.turbulence6th.com</a> internet sitesinde üyeler tarafından beyan edilen, yazılan, kullanılan fikir ve düşünceler, tamamen üyelerin kendi kişisel görüşleridir ve görüş sahibini bağlar. Bu görüş ve düşüncelerin Campüs İlan’la hiçbir ilgi ve bağlantısı yoktur. Campüs İlan’ın üyenin beyan edeceği fikir ve görüşler nedeniyle üçüncü kişilerin uğrayabileceği zararlardan ve üçüncü kişilerin beyan edeceği fikir ve görüşler nedeniyle üyenin uğrayabileceği zararlardan dolayı herhangi bir sorumluluğu bulunmamaktadır.
 									<br>
 
-									2.6. Campüs İlan, üye verilerinin yetkisiz kişilerce okunmasından ve üye yazılım ve verilerine gelebilecek zararlardan dolayı sorumlu olmayacaktır. Üye, www.campusilan.com internet sitesinin kullanılmasından dolayı uğrayabileceği herhangi bir zarar yüzünden Campüs İlan'dan tazminat talep etmemeyi peşinen kabul etmiştir.
+									2.6. Campüs İlan, üye verilerinin yetkisiz kişilerce okunmasından ve üye yazılım ve verilerine gelebilecek zararlardan dolayı sorumlu olmayacaktır. Üye, campusilan.turbulence6th.com internet sitesinin kullanılmasından dolayı uğrayabileceği herhangi bir zarar yüzünden Campüs İlan'dan tazminat talep etmemeyi peşinen kabul etmiştir.
 									<br>
 
 									2.7. Üye, diğer internet kullanıcılarının yazılımlarına ve verilerine izinsiz olarak ulaşmamayı veya bunları kullanmamayı kabul etmiştir. Aksi takdirde, bundan doğacak hukuki ve cezai sorumluluklar tamamen üyeye aittir.
@@ -562,10 +562,10 @@
 									2.9. Campüs İlan’ın her zaman tek taraflı olarak gerektiğinde üyenin üyeliğini silme, müşteriye ait dosya, belge ve bilgileri silme hakkı vardır. Üye işbu tasarrufu önceden kabul eder. Bu durumda, Campüs İlan’ın hiçbir sorumluluğu yoktur.
 									<br>
 
-									2.10. <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesi yazılım ve tasarımı Campüs İlan mülkiyetinde olup, bunlara ilişkin telif hakkı ve/veya diğer fikri mülkiyet hakları ilgili kanunlarca korunmakta olup, bunlar üye tarafından izinsiz kullanılamaz, iktisap edilemez ve değiştirilemez. Bu web sitesinde adı geçen başkaca şirketler ve ürünleri sahiplerinin ticari markalarıdır ve ayrıca fikri mülkiyet hakları kapsamında korunmaktadır.
+									2.10. <a href="http://campusilan.turbulence6th.com/">campusilan.turbulence6th.com</a> internet sitesi yazılım ve tasarımı Campüs İlan mülkiyetinde olup, bunlara ilişkin telif hakkı ve/veya diğer fikri mülkiyet hakları ilgili kanunlarca korunmakta olup, bunlar üye tarafından izinsiz kullanılamaz, iktisap edilemez ve değiştirilemez. Bu web sitesinde adı geçen başkaca şirketler ve ürünleri sahiplerinin ticari markalarıdır ve ayrıca fikri mülkiyet hakları kapsamında korunmaktadır.
 									<br>
 
-									2.11. Campüs İlan tarafından <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesinin iyileştirilmesi, geliştirilmesine yönelik olarak ve/veya yasal mevzuat çerçevesinde siteye erişmek için kullanılan İnternet servis sağlayıcısının adı ve Internet Protokol (IP) adresi, Siteye erişilen tarih ve saat, sitede bulunulan sırada erişilen sayfalar ve siteye doğrudan bağlanılmasını sağlayan Web sitesinin Internet adresi gibi birtakım bilgiler toplanabilir.
+									2.11. Campüs İlan tarafından <a href="http://campusilan.turbulence6th.com/">campusilan.turbulence6th.com</a> internet sitesinin iyileştirilmesi, geliştirilmesine yönelik olarak ve/veya yasal mevzuat çerçevesinde siteye erişmek için kullanılan İnternet servis sağlayıcısının adı ve Internet Protokol (IP) adresi, Siteye erişilen tarih ve saat, sitede bulunulan sırada erişilen sayfalar ve siteye doğrudan bağlanılmasını sağlayan Web sitesinin Internet adresi gibi birtakım bilgiler toplanabilir.
 									<br>
 
 									2.12. Campüs İlan, üyenin kişisel bilgilerini yasal bir zorunluluk olarak istendiğinde veya (a) yasal gereklere uygun hareket etmek veya Campüs İlan'a tebliğ edilen yasal işlemlere uymak; (b) Campüs İlan web sitesi ailesinin haklarını ve mülkiyetini korumak ve savunmak için gerekli olduğuna iyi niyetle kanaat getirdiği hallerde açıklayabilir.
