--- a/app/views/user_mailer/forgot_password.html.erb
+++ b/app/views/user_mailer/forgot_password.html.erb
@@ -11,13 +11,13 @@
 
 <body >
 
-	<img src="http://www.campusilan.com/resources/images/logo.png"/>
+	<img src="http://campusilan.turbulence6th.com/resources/images/logo.png"/>
 
 	
 	<p>	Şifrenizi unuttuğunuzu söylediniz.O zaman hemen size yardımcı olalım </p> 
 
 	
-	<p> Yeni şifre oluşturmak için <a href="http://www.campusilan.com/sifredegistir?user=<%= @user.username %>&token=<%= @user.confirm_token %>">buraya</a> tıklayınız.</p>
+	<p> Yeni şifre oluşturmak için <a href="http://campusilan.turbulence6th.com/sifredegistir?user=<%= @user.username %>&token=<%= @user.confirm_token %>">buraya</a> tıklayınız.</p>
 		
 		
 
