--- a/app/views/user_mailer/sifredegisti.html.erb
+++ b/app/views/user_mailer/sifredegisti.html.erb
@@ -11,7 +11,7 @@
 
 <body >
 
-	<img src="http://www.campusilan.com/resources/images/logo.png"/>
+	<img src="http://campusilan.turbulence6th.com/resources/images/logo.png"/>
 
 	
 	<p>	Şifreniz başarıyla değiştirildi. </p> 
