--- a/app/views/user_mailer/verify.html.erb
+++ b/app/views/user_mailer/verify.html.erb
@@ -11,7 +11,7 @@
 
 <body >
 
-	<img src="http://www.campusilan.com/resources/images/logo.png"/>
+	<img src="http://campusilan.turbulence6th.com/resources/images/logo.png"/>
 
 	
 	<p>	Campus İlan'a hoşgeldiniz.Umarız Campus İlan'da keyifli vakit geçirir ve aradığınızı bulabilirsiniz. </p> 
@@ -25,7 +25,7 @@
 	
 	
 
-<a href="http://www.campusilan.com/verify?user=<%= @user.username %>&token=<%= @user.confirm_token %>">Hesabımı onayla</a> <br><br>
+<a href="http://campusilan.turbulence6th.com/verify?user=<%= @user.username %>&token=<%= @user.confirm_token %>">Hesabımı onayla</a> <br><br>
 
 <p>Bizi tercih ettiğiniz için teşekkür ederiz. </p>
 <p style="color:#2E86A3;">Campus İlan - Üniversitelilerin ilan sitesi  </p>
